--- a/Makefile.rules
+++ b/Makefile.rules
@@ -94,14 +94,18 @@ ifeq ($(OPTIONS_USE_AMDLIBM),yes)
     DEFINES += -DUSE_AMDLIBM
 endif
 
-FLAGSC := -g -Wall -fPIC -O3 $(INCLUDES) $(DEFINES) $(OPTIONS_CFLAGS)
-FLAGSCPP := $(FLAGSC) -Wctor-dtor-privacy -Wnon-virtual-dtor -Woverloaded-virtual -Wsign-promo -fPIC -O3 $(INCLUDES) $(DEFINES)
+FLAGSC := -g -Wall -fPIC $(INCLUDES) $(DEFINES) $(OPTIONS_CFLAGS)
+FLAGSCPP := $(FLAGSC) -Wctor-dtor-privacy -Wnon-virtual-dtor -Woverloaded-virtual -Wsign-promo -fPIC $(INCLUDES) $(DEFINES)
+ifneq ($(OPTIONS_DEBUG),yes)
+    FLAGSC += -O3
+    FLAGSCPP += -O3
+endif
 
 #lazy evaluation because of $@, $+.
 COMPILE = echo creating $@; $(CXX) -c $(EXTRA_COMPILE)
-LINK_EXE = echo linking $@; $(CXX) -O3 -o $@ $+ $(OPTIONS_LDFLAGS_EXE) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib $(LIBS) $(SQLITE_LIBS) $(BOOST_LIBS)
-LINK_EXE_NOLIBS = echo linking $@; $(CXX) -O3 -o $@ $+ $(OPTIONS_LDFLAGS_EXE) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib
-LINK_SO = echo linking $@; $(CXX) -O3 -o $@ $+ $(OPTIONS_LDFLAGS_SO) -Wl,-R,'$$ORIGIN/../lib' -shared -rdynamic $(BOOST_LIBS)
+LINK_EXE = echo linking $@; $(CXX) -o $@ $+ $(OPTIONS_LDFLAGS_EXE) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib $(LIBS) $(SQLITE_LIBS) $(BOOST_LIBS)
+LINK_EXE_NOLIBS = echo linking $@; $(CXX) -o $@ $+ $(OPTIONS_LDFLAGS_EXE) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib
+LINK_SO = echo linking $@; $(CXX) -o $@ $+ $(OPTIONS_LDFLAGS_SO) -Wl,-R,'$$ORIGIN/../lib' -shared -rdynamic $(BOOST_LIBS)
 
 .bin/%.o: %.cpp
 	@$(COMPILE) $(FLAGSCPP) -o $@ $<
