* change internals of toy generation in cls_limits, as preparation of multithreading  * add multithreading option in theta-auto for bayesian_quantiles  * minor interface changes and cleanup

--- a/examples/gaussoverflat-cls.cfg
+++ b/examples/gaussoverflat-cls.cfg
@@ -9,19 +9,11 @@ deltanll = {
     type = "deltanll_hypotest";
     name = "deltanll";
     minimizer = "@myminuit";
-    background-only-distribution = {
-         type = "product_distribution";
-         distributions=("@b-dist", "@delta-s-zero");
-    };
-    //background-only-distribution = "@gaussoverflat.parameter-distribution";
+    background-only-distribution = "@gaussoverflat.parameter-distribution";
     signal-plus-background-distribution = "@gaussoverflat.parameter-distribution";
-    //restrict_poi = "s";
+    restrict_poi = "s";
 };
 
-delta-s-zero = {
-   type = "delta_distribution";
-   s = 0.0;
-};
 
 // note: for complex models, minuit might have trouble converging. If the error rate
 // is too high (say > 5-10%, or it fails on data), consider using a more robust minimizer, e.g., minimizer_chain
@@ -52,7 +44,7 @@ main = {
     
     // for debugging only. Not really needed in case everything is Ok. If something fails, please include
     // the debug log in your bug report:
-    //debuglog = "debug-gaussoverflat-cls.txt";
+    debuglog = "debug-gaussoverflat-cls.txt";
 };
 
 options = {
