* fix Makefile for missing lbfgs plugin  * better distribution of toys to multiple threads in case n_threads is closer to (or larger) than n_toys  * fix scale_prediction in case of statistical uncertainties

--- a/liblbfgs/Makefile
+++ b/liblbfgs/Makefile
@@ -3,7 +3,9 @@ deps := $(patsubst %.o,%.d,$(objects))
 
 include ../Makefile.rules
 
-all: ../lib/liblbfgs.so
+all: 
+
+#all: ../lib/liblbfgs.so
 
 ../lib/liblbfgs.so: $(objects)
 	@$(LINK_SO)
