--- a/Makefile.rules
+++ b/Makefile.rules
@@ -47,7 +47,7 @@ else
       ifeq ($(shell test -e /usr/lib/libboost_system-mt.so && echo -n A),A)
          BS:=-mt
       endif
-      BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS) -lboost_system$(BS) -lboost_iostreams$(BS)
+      BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS) -lboost_system$(BS) -lboost_iostreams$(BS) -lboost_timer$(BS)
    endif
 endif
 
