--- a/root/CMakeLists.txt
+++ b/root/CMakeLists.txt
@@ -7,14 +7,12 @@ string(STRIP "${root_libs}" root_libs)
 if(root_cflags)
    file(GLOB root_sources *.cpp)
    add_library(root MODULE ${root_sources})
-   target_link_libraries(root ${Boost_LIBRARIES} libtheta)
+   target_link_libraries(root ${Boost_LIBRARIES} libtheta ${root_libs} -lMinuit2)
    add_custom_command(TARGET root POST_BUILD COMMAND mv ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libroot.so ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/root.so)
-   set_property(TARGET root APPEND PROPERTY LINK_FLAGS "${root_libs} -lMinuit2")
    set_property(TARGET root APPEND PROPERTY COMPILE_FLAGS "${root_cflags}")
 
    add_executable(histos histos.cxx)
-   target_link_libraries(histos libtheta sqlite3)
-   set_property(TARGET histos APPEND PROPERTY LINK_FLAGS "${root_libs} -lMinuit2")
+   target_link_libraries(histos libtheta sqlite3 ${root_libs} -lMinuit2)
    set_property(TARGET histos APPEND PROPERTY COMPILE_FLAGS "${root_cflags}")
 
 else(root_cflags)
