* only include boost.timer as Makefile.option, as this is only supported for new versions of boost  * do not create more threads than necessary in case of multithreading and very few toys  * fix writing out the correct seed to the output database (this does *not* affect the results)  * various small changes in theta-auto to move towards better encapsulation

--- a/examples/gaussoverflat-mt.cfg
+++ b/examples/gaussoverflat-mt.cfg
@@ -3,11 +3,11 @@
 @include "gaussoverflat-include.cfg"
 
 intervals = {
-   type = "deltanll_intervals";
+   type = "mcmc_quantiles";
    name = "intervals";
    parameter = "s";
-   clevels = [0.68];
-   minimizer = { type = "root_minuit"; };
+   quantiles = [0.16, 0.84];
+   iterations = 10000;
 };
 
 
@@ -18,10 +18,11 @@ main = {
       type = "model_source";
       model = "@main.model";
       name = "source";
+      rnd_gen = { seed = 1; };
    };
    model = "@gaussoverflat";
    producers = ("@intervals");
-   n-events = 5000;
+   n-events = 100;
    
    output_database = {
       type = "sqlite_database";
