--- a/Makefile.options
+++ b/Makefile.options
@@ -20,6 +20,9 @@ OPTIONS_BUILD_LLVM := no
 # Note that debugging symbols are added in any case.
 OPTIONS_DEBUG := no
 
+# if set to yes, include the "--print-time" option for theta
+OPTIONS_TIMER := no
+
 # Additional flags for compilation / linking so files / linking exe files:
 OPTIONS_CFLAGS :=
 OPTIONS_LDFLAGS_SO :=
