--- a/Makefile.rules
+++ b/Makefile.rules
@@ -47,7 +47,7 @@ else
       ifeq ($(shell test -e /usr/lib/libboost_system-mt.so && echo -n A),A)
          BS:=-mt
       endif
-      BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS) -lboost_system$(BS) -lboost_iostreams$(BS) -lboost_timer$(BS)
+      BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS) -lboost_system$(BS) -lboost_iostreams$(BS)
    endif
 endif
 
@@ -93,6 +93,13 @@ ifeq ($(OPTIONS_USE_AMDLIBM),yes)
     LIBS += -lamdlibm
     DEFINES += -DUSE_AMDLIBM
 endif
+
+ifeq ($(OPTIONS_TIMER),yes)
+    DEFINES += -DUSE_TIMER
+    LIBS += -lboost_timer$(BS)
+endif
+
+
 
 FLAGSC := -g -Wall -fPIC $(INCLUDES) $(DEFINES) $(OPTIONS_CFLAGS)
 FLAGSCPP := $(FLAGSC) -Wctor-dtor-privacy -Wnon-virtual-dtor -Woverloaded-virtual -Wsign-promo -fPIC $(INCLUDES) $(DEFINES)
