--- a/examples/gaussoverflat-writer.cfg
+++ b/examples/gaussoverflat-writer.cfg
@@ -1,26 +1,15 @@
-//example for the pseudodata_writer
+//example for the pseudodata_writer: this configuration will produce an output file which only contains the
+// toy data.
+// See gaussoverflat-write-use of how to configure a data_source to read in the toys produced here.
+//
+// This is useful to separate the toy generation step as completely as possible from the analysis step.
+// In some setup, this allows more easily to run different models for toy generation and analysis.
 @include "gaussoverflat-include.cfg"
-
-mle = {
-    type = "mle";
-    name = "mle";
-
-    //use minuit as minimizer and source of errors:
-    minimizer = "@myminuit";
-
-    //write out result for both parameters:
-    parameters = ("s", "b");
-};
 
 writer = {
    type = "pseudodata_writer";
    name = "writer";
-   write-data = false;
-   observables = ("mass");
-};
-
-myminuit = {
-   type = "root_minuit";
+   write-data = true;
 };
 
 main = {
@@ -30,7 +19,7 @@ main = {
       name = "source";
    };    
    model = "@gaussoverflat";
-   producers = ("@mle", "@writer");
+   producers = ("@writer");
    n-events = 500;
    output_database = {
         type = "sqlite_database";
@@ -39,5 +28,5 @@ main = {
 };
 
 options = {
-  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so");
 };
