* make compile with llvm / clang  * some small fixes and extensions to theta-auto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,12 @@ elseif(profile)
 else()
   if(release)
      set(CMAKE_BUILD_TYPE Release)
+     string(FIND "${CMAKE_CXX_COMPILER}" "clang++" cl)
+     if(cl GREATER -1)
+        message(STATUS "found clang")
+        string(REPLACE "-O3" "-O4" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
+        string(REPLACE "-O3" "-O4" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
+     endif()
      message(STATUS "building release version")
   else()
      message(STATUS "building release version +debug")
