--- a/root/CMakeLists.txt
+++ b/root/CMakeLists.txt
@@ -3,6 +3,12 @@ execute_process(COMMAND root-config --libs OUTPUT_VARIABLE root_libs)
 string(STRIP "${root_cflags}" root_cflags)
 string(STRIP "${root_libs}" root_libs)
 
+string(REPLACE "-lNet" "" root_libs "${root_libs}")
+string(REPLACE "-lTree" "-lTree -lNet" root_libs "${root_libs}")
+#string(REPLACE "-lCore" "" root_libs "${root_libs}")
+#set(root_libs "${root_libs} -lCore")
+
+
 
 if(root_cflags)
    file(GLOB root_sources *.cpp)
@@ -11,9 +17,9 @@ if(root_cflags)
    add_custom_command(TARGET root POST_BUILD COMMAND mv ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libroot.so ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/root.so)
    set_property(TARGET root APPEND PROPERTY COMPILE_FLAGS "${root_cflags}")
 
-   add_executable(histos histos.cxx)
-   target_link_libraries(histos libtheta sqlite3 ${root_libs} -lMinuit2)
-   set_property(TARGET histos APPEND PROPERTY COMPILE_FLAGS "${root_cflags}")
+   #add_executable(histos histos.cxx)
+   #target_link_libraries(histos libtheta sqlite3 ${root_libs} -lMinuit2)
+   #set_property(TARGET histos APPEND PROPERTY COMPILE_FLAGS "${root_cflags}")
 
 else(root_cflags)
    message(STATUS "ROOT not found. Not building ROOT dependent stuff")
