* modify mcmc_chain_txt to write out chain also in arbitrary theta::Database plugins, not only text files  * rename mcmc_chain_txt to mcmc_chain  * add example for mcmc_chain writing to a root file; modify existing example to use new plugin name  * small fixes in rootfile_database

--- a/examples/gaussoverflat-mcmc_chain_db.cfg
+++ b/examples/gaussoverflat-mcmc_chain_db.cfg
@@ -3,7 +3,10 @@
 mcmc_chain = {
     type = "mcmc_chain";
     iterations = 50000;
-    outfile_prefix = "gof_chain";
+    output_database = {
+        type = "rootfile_database";
+        filename = "chains.root";
+    };
 };
 
 main = {
@@ -22,6 +25,6 @@ main = {
 };
 
 options = {
-  plugin_files = ("$THETA_DIR/lib/core-plugins.so");
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
 };
 
