* new minimizer interface: use covariance estimate, not only step size  * new minimizers: simplex and lbfgs  * new root minuit defaults  * memory layout optimizations for template morphing

--- a/liblbfgs/Makefile
+++ b/liblbfgs/Makefile
@@ -3,9 +3,9 @@ deps := $(patsubst %.o,%.d,$(objects))
 
 include ../Makefile.rules
 
-all: 
+#all: 
 
-#all: ../lib/liblbfgs.so
+all: ../lib/liblbfgs.so
 
 ../lib/liblbfgs.so: $(objects)
 	@$(LINK_SO)
