* build with amdlibm by default; do not build assembler version of likelihood function  * cleanup for C++11 (mainly adding "std::" for "isnan" and "isinf" ...)  * faster copying of histograms; add add_with_coeff2 for histograms  * avoid an unnecessary copy in cubiclinear_histomorph, which is now faster  * more tests, esp. for the histograms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ option(coverage "build for coverage tests" OFF)
 option(lto "build with link-time optimization (only for gcc and release builds)" OFF)
 option(profile "build for profiling" OFF)
 option(release "build release version" ON)
-option(amdlibm "use amdlibm instead of libm in some places" OFF)
+option(amdlibm "use amdlibm instead of libm in some places" ON)
 option(llvm "Build llvm plugins" OFF)
 option(generic "use generic implementation of funtions; not optimized, platform-specific ones" OFF)
 
