--- a/Makefile.options
+++ b/Makefile.options
@@ -10,7 +10,7 @@
 OPTIONS_BUILD_TESTS := yes
 
 # If yes, use amdlibm for some math functions instead of libm
-OPTIONS_USE_AMDLIBM := no
+OPTIONS_USE_AMDLIBM := yes
 
 # If yes, build llvm plugins in "llvm" subdirectory. Requires working
 # llvm installation (tested with 2.7 and 2.8)
@@ -21,10 +21,10 @@ OPTIONS_BUILD_LLVM := no
 OPTIONS_DEBUG := no
 
 # if set to yes, include the "--print-time" option for theta
-OPTIONS_TIMER := no
+OPTIONS_TIMER := yes
 
 # Additional flags for compilation / linking so files / linking exe files:
-OPTIONS_CFLAGS :=
+OPTIONS_CFLAGS := 
 OPTIONS_LDFLAGS_SO :=
 OPTIONS_LDFLAGS_EXE :=
 
