--- a/src/Makefile
+++ b/src/Makefile
@@ -8,18 +8,19 @@ libobjects += .bin/log2_dot.o .bin/atomic.o
 
 all: ../lib/libtheta.so
 
-# switch between implementations of log2_dot
-ifeq ($(OPTIONS_GENERIC_ARCH),yes)
-
 .bin/log2_dot.o: log2_dot.cxx
 	@$(COMPILE) $(FLAGSCPP) -o $@ $<
+
+# switch between implementations of atomic:
+ifeq ($(OPTIONS_GENERIC_ARCH),yes)
+
 .bin/atomic.o: atomic.cxx
 	@$(COMPILE) $(FLAGSCPP) -o $@ $<
 
 else
 
-.bin/log2_dot.o: log2_dot.s
-	@$(COMPILE) $(FLAGSC) -o $@ $<
+#.bin/log2_dot.o: log2_dot.s
+#	@$(COMPILE) $(FLAGSC) -o $@ $<
 .bin/atomic.o: atomic.s
 	@$(COMPILE) $(FLAGSC) -o $@ $<
 .bin/atomic_asserts.o: atomic_asserts.cxx
