* update amdlibm t 3.0.2  * remove assmebler version of log2_dot; amdlibm seems to be faster  * safer default options: do not use boost timer  * use std::set again instead of boost::container::flat_set

--- a/Makefile.options
+++ b/Makefile.options
@@ -21,7 +21,7 @@ OPTIONS_BUILD_LLVM := no
 OPTIONS_DEBUG := no
 
 # if set to yes, include the "--print-time" option for theta
-OPTIONS_TIMER := yes
+OPTIONS_TIMER := no
 
 # Additional flags for compilation / linking so files / linking exe files:
 OPTIONS_CFLAGS := 
