* make llvm module compile in current theta, with llvm 3.0  * explicitely expand previous use of "pow" in cubiclinear_histomorph as g++ calls "pow", which has poor performance in this case (but only with "-std=c++0x"(!))

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_VERBOSE_MAKEFILE, 1)
 
 option(coverage "build for coverage tests" OFF)
 option(lto "build with link-time optimization (only for gcc and release builds)" OFF)
+option(cxx11 "build with C++11 (only for gcc and release builds)" OFF)
 option(profile "build for profiling" OFF)
 option(release "build release version" ON)
 option(amdlibm "use amdlibm instead of libm in some places" ON)
@@ -31,6 +32,10 @@ else()
               message(STATUS "enabling link-time optimization")
               set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
               set(CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -flto")
+         endif()
+         if(cxx11)
+              message(STATUS "enabling cxx11")
+              set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
          endif()
      endif()
      message(STATUS "building release version")
