* major changes to llvm to compile with newer llvm versions (tested with 3.1)  * add new quasi-newton minimizer in "simplex"  * add option to include bin-by-bin uncertainty in fixed_gauss and poly for testing  * various small fixes / cleanup

--- a/llvm/Makefile
+++ b/llvm/Makefile
@@ -12,5 +12,8 @@ all: ../lib/llvm-plugins.so
 ../lib/llvm-plugins.so: $(libobjects)
 	@$(LINK_SO) $(shell llvm-config-3.1 --libfiles all) #nativecodegen engine scalaropts ipo)
 
+test: .bin/test.o ../lib/llvm-plugins.so
+	@$(LINK_EXE)
+
 clean-subdir:
 	@rm -f ../lib/llvm-plugins.so
