* some cleanup of unused histogram-with-uncertainties code  * make llvm work with bb uncertainties, finally  * rewrite utils to emit different theta config files with additional_nll_term in the model instead of the producers  * some minor cleanup in utils2

--- a/llvm/Makefile
+++ b/llvm/Makefile
@@ -13,7 +13,7 @@ all: ../lib/llvm-plugins.so
 	@$(LINK_SO) $(shell llvm-config-3.1 --libfiles all) #nativecodegen engine scalaropts ipo)
 
 test: .bin/test.o ../lib/llvm-plugins.so
-	@$(LINK_EXE)
+	@$(LINK_EXE) ../lib/core-plugins.so
 
 clean-subdir:
 	@rm -f ../lib/llvm-plugins.so
