* adapt config for cmake:    - build in-source as plain make and as usual so far    - add options similar to usual make for timer    - add option for out of source builds  * add bugfix and test for atomic_int linking problems leading to segfaults  * use more efficient containers in model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,48 +1,45 @@
 cmake_minimum_required(VERSION 2.6)
 project(theta)
-set(CMAKE_VERBOSE_MAKEFILE, 1)
 
 option(coverage "build for coverage tests" OFF)
 option(lto "build with link-time optimization (only for gcc and release builds)" OFF)
 option(cxx11 "build with C++11 (only for gcc and release builds)" OFF)
-option(profile "build for profiling" OFF)
-option(release "build release version" ON)
+option(profile "build for profiling (-O0 -pg)" OFF)
 option(amdlibm "use amdlibm instead of libm in some places" ON)
 option(llvm "Build llvm plugins" OFF)
-option(generic "use generic implementation of funtions; not optimized, platform-specific ones" OFF)
+option(timer "with boost timer" OFF)
+option(insource "Put binaries in bin and lib source directories (otherwise, put them in build-dir/theta/{bin,lib})" ON)
+option(generic "Use generic C++ implementation of functions; not optimized, platform-specific assembler ones" OFF)
+
+set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+set(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib")
+
+string(REPLACE "-O2" "-O3" CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
 
 if(coverage)
    message(STATUS "building for coverage test")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -O0")
+   set(CMAKE_BUILD_TYPE Debug)
 elseif(profile)
    message(STATUS "building for profiling")
    set(CMAKE_BUILD_TYPE Release) # to enable optimizations
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
-   #set(CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -pg")
 else()
-  if(release)
-     set(CMAKE_BUILD_TYPE Release)
-     string(FIND "${CMAKE_CXX_COMPILER}" "clang++" cl)
-     if(cl GREATER -1)
-        message(STATUS "found clang")
-        string(REPLACE "-O3" "-O4" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
-        string(REPLACE "-O3" "-O4" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
-     else()
-         if(lto)
-              message(STATUS "enabling link-time optimization")
-              set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
-              set(CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -flto")
-         endif()
-         if(cxx11)
-              message(STATUS "enabling cxx11")
-              set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-         endif()
-     endif()
-     message(STATUS "building release version")
-  else()
-     message(STATUS "building release version +debug")
-     set(CMAKE_BUILD_TYPE RelWithDebInfo)
+   set(CMAKE_BUILD_TYPE RelWithDebInfo)
+   string(FIND "${CMAKE_CXX_COMPILER}" "clang++" cl)
+   if(cl GREATER -1)
+   else()
+       if(lto)
+            message(STATUS "enabling link-time optimization")
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
+            set(CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -flto")
+       endif()
+       if(cxx11)
+            message(STATUS "enabling cxx11")
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+       endif()
    endif()
+   message(STATUS "building release version ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
 endif()
 
 if(amdlibm)
@@ -68,6 +65,10 @@ else()
    enable_language(ASM-ATT)
 endif()
 
+if(timer)
+    add_definitions(-DUSE_TIMER)
+endif()
+
 
 # note: set BOOST_ROOT environment variable before executing cmake to set alternate
 # boost prefix; you might have to add your boost version to Boost_ADDITIONAL_VERSIONS below.
@@ -76,7 +77,7 @@ set(Boost_NO_SYSTEM_PATHS TRUE)
 endif()
 
 set(Boost_ADDITIONAL_VERSIONS "1.52" "1.52.0")
-find_package(Boost REQUIRED COMPONENTS regex program_options filesystem system thread timer)
+find_package(Boost REQUIRED COMPONENTS regex program_options filesystem system thread timer iostreams)
 
 if(NOT Boost_FOUND)
    message(SEND_ERROR "boost not found")
@@ -87,15 +88,20 @@ endif()
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR})
 
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/theta/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/theta/bin)
-#set(test_dir ${CMAKE_SOURCE_DIR}/test)
+if(insource)
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+else()
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/theta/lib)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/theta/bin)
+endif()
 
 add_subdirectory(src)
 add_subdirectory(plugins)
 add_subdirectory(libconfig)
 add_subdirectory(bin)
 add_subdirectory(root)
+add_subdirectory(test)
 
 if(llvm)
    message(STATUS "including llvm")
