--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,5 +1,3 @@
 add_executable(theta theta.cpp)
-target_link_libraries(theta libtheta ${Boost_LIBRARIES})
+target_link_libraries(theta libtheta)
 
-#add_executable(merge merge.cpp)
-#target_link_libraries(merge sqlite3 libtheta ${Boost_LIBRARIES})
