* improve documentation  * add "bayesian_posterior_model_prediction" in theta-auto as interface to theta's "mcmc_mean_prediction" recording    the mean and standard deviation of the Poisson means of the model prediction while running a Markov Chain on the posterior

--- a/Makefile.options
+++ b/Makefile.options
@@ -36,3 +36,6 @@ OPTIONS_LDFLAGS_EXE :=
 # the value given here.
 OPTIONS_GENERIC_ARCH := no
 
+# allow inclusion of (not svn-versioned) local override:
+-include Makefile.options.local
+
