* add multithreading on likelihood evaluation level using intel's threading building blocks  * add use_tbb option in theta-auto and documentation  * fix a incompatibility of plugin builder with llvm plugin overloading  * some cleanup of Makefiles and CMakeLists:    - remove obsolete and duplicate stuff    - allow overriding values in Makefile.options via unversioned Makefile.options.local

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ option(cxx11 "build with C++11 (only for gcc and release builds)" OFF)
 option(profile "build for profiling (-O0 -pg)" OFF)
 option(amdlibm "use amdlibm instead of libm in some places" ON)
 option(llvm "Build llvm plugins" OFF)
+option(tbb "Build tbb plugins" OFF)
 option(timer "with boost timer" OFF)
 option(insource "Put binaries in bin and lib source directories (otherwise, put them in build-dir/theta/{bin,lib})" ON)
 option(generic "Use generic C++ implementation of functions; not optimized, platform-specific assembler ones" OFF)
@@ -108,4 +109,7 @@ if(llvm)
    add_subdirectory(llvm)
 endif()
 
-
+if(tbb)
+   message(STATUS "including tbb")
+   add_subdirectory(tbb)
+endif()
