* make tbb Makefile work for older gcc versions by using "-std=c++0x"  * remove building of liblbfgs from main Makefile  * improve gridpack-building scripts: more robust, better error detection

--- a/tbb/Makefile
+++ b/tbb/Makefile
@@ -5,7 +5,7 @@ deps := $(patsubst %.cpp,.bin/%.d,$(libsources))
 include ../Makefile.options
 include ../Makefile.rules
 
-EXTRA_COMPILE := -std=c++11
+EXTRA_COMPILE := -std=c++0x
 
 all: ../lib/tbb-plugins.so
 
