performance improvements by  * adding assign_unchecked to Histogram / HistogramWithUncertainties as an (unsave but fast) replacement for operator=; use it in cubiclinear_histomorph  * introduce igauss plugin handling all the cases required by theta-auto as a single Distribution  * save some evluations in exp_function in case the plus and minus lambda values are the same (and add exp_function test)  * minor for-loop tweak in multiply function  * in theta-auto use igauss instead of product_distribution  * in theta-auto, detect if a coefficient consists only of one exp_function and avoid using the multiply plugin in this case  * default_model_nll: avoid iterating over a std::map when iterating over observables, use the vector from default_model instead
These improvements can increase the number of likelihood evaluations per second by 50% for some models

refactoring
 * keep default_model_nll in anonymous namespace in src/model.cpp instead of ("public") interface/model.hpp header
 * make counter for likelihood evaluations global instead of static in default_model_nll
 * whitespace fixes in core.cpp

--- a/root/Makefile
+++ b/root/Makefile
@@ -46,7 +46,7 @@ create_testtree: .bin/create_testtree.o
 	@$(LINK_EXE_NOLIBS) $(EXTRA_LINK)
 
 ../lib/root.so: $(objects)
-	$(LINK_SO) $(EXTRA_LINK)
+	@$(LINK_SO) $(EXTRA_LINK)
 
 endif
 
