* add newton minimizer to core-plugins; remove "simplex" source directory  * link tests directly against core-plugins.so to allow testing of some "internals" of plugins  * introduce "run_theta" option for bayesian_quantiles

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,7 +4,10 @@ ifeq ($(OPTIONS_BUILD_TESTS),yes)
 
 # build test*.cpp as binary test:
 testsources := $(wildcard test*.cpp utils.cpp)
+testsources := $(patsubst test-codegen.cpp,,$(testsources))
 testobjects := $(patsubst %.cpp,.bin/%.o,$(testsources))
+
+dir := $(shell echo $$PWD)
 
 # build test*.cxx as .so; will be loaded as plugin by tests:
 libtestsources := $(wildcard test*.cxx)
@@ -17,7 +20,7 @@ include ../Makefile.rules
 all: ../bin/test ../lib/liblibtest.so
 
 ../bin/test: $(testobjects)
-	@$(LINK_EXE)
+	@$(LINK_EXE) -l:$(dir)/../lib/core-plugins.so
 
 ../lib/liblibtest.so: $(libtestobjects)
 	@$(LINK_SO)
