* fixes for CMakeLists  * fix include of malloc for Mac OS compatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ option(coverage "build for coverage tests" OFF)
 option(lto "build with link-time optimization (only for gcc and release builds)" OFF)
 option(cxx11 "build with C++11 (only for gcc and release builds)" OFF)
 option(profile "build for profiling (-O0 -pg)" OFF)
-option(amdlibm "use amdlibm instead of libm in some places" ON)
+option(amdlibm "use amdlibm instead of libm in some places" OFF)
 option(llvm "Build llvm plugins" OFF)
 option(tbb "Build tbb plugins" OFF)
 option(timer "with boost timer" OFF)
@@ -98,11 +98,10 @@ else()
 endif()
 
 add_subdirectory(src)
-add_subdirectory(plugins)
 add_subdirectory(libconfig)
+add_subdirectory(plugins)
 add_subdirectory(bin)
 add_subdirectory(root)
-add_subdirectory(test)
 
 if(llvm)
    message(STATUS "including llvm")
@@ -113,3 +112,4 @@ if(tbb)
    message(STATUS "including tbb")
    add_subdirectory(tbb)
 endif()
+
